k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: htmx-fastapi
  labels:
    name: htmx-fastapi
    app: htmx-fastapi-service
